TurboWarp and fix startmenu misalignment

--- a/tw.css
+++ b/tw.css
@@ -56,25 +56,26 @@ taskbar action-center:active {background-color:rgba(255,255,255,0.2)}
 taskbar actions {@apply ml-auto float-right mr-1 border-r border-r-[#78797A];}
 taskbar action-center {@apply mr-2 block hover:bg-white/10;}
 taskbar clock {line-height:18px;font-size:12px; @apply hover:bg-white/10 text-[#E6E6E6] text-center;}
-taskbar {@apply fixed bottom-0 w-[100svw]  left-0 h-[40px] bg-black/70 backdrop-blur-xl z-[999999999] flex-row flex}
+taskbar {@apply fixed bottom-0 w-[100svw]  left-0 h-[40px] bg-black/70 z-[999999999] flex-row flex;backdrop-filter:blur(24px);}
 .slideIn {animation:0.22s slideIn forwards;}
 .slideOut {animation:0.22s slideOut forwards;}
 .reset {animation: none none none none none none !important; animation-play-state:paused !important;}
 @keyframes slideIn {
-    0% {min-height:0svh;opacity:0;position:relative; bottom:10.5svh;left:0;}
-    0.999% {min-height:0svh;opacity:0;position:relative; bottom:10.5svh;left:0;}
-    1% {min-height:14svh;opacity:0;position:relative; bottom:10.5svh;left:0;}
-    to {min-height:50svh;opacity:1;position:relative; bottom:50.5svh;left:0;}
+    0% {min-height:0px;opacity:0;position:absolute; bottom:0px;left:0;max-height:0px;}
+    0.999% {min-height:0svh;opacity:0;position:absolute; bottom:0px;left:0;max-height:fit-content;}
+    1% {min-height:14svh;opacity:0;position:absolute; bottom:18px;left:0;max-height:fit-content;}
+    to {min-height:50svh;opacity:1;position:absolute; bottom:40px;left:0;max-height:fit-content;}
 }
 @keyframes slideOut {
-    from {min-height:50svh;opacity:1; position:relative; bottom:50.5svh; left:0;}
-    66% {min-height:9svh;opacity:0; position:relative; bottom:9svh;left:0;}
-    99% {min-height:9svh;opacity:0; position:relative; bottom:9svh;left:0;}
-    to {min-height:0svh;opacity:0; position:relative; bottom:9.5svh;left:0;}
+    from {min-height:50svh;opacity:1; position:absolute; bottom:40px; left:0;}
+    66% {min-height:9svh;opacity:0; position:absolute; bottom:18px;left:0;}
+    99% {min-height:9svh;opacity:0; position:absolute; bottom:18px;left:0;}
+    to {min-height:0px;opacity:0; position:absolute; bottom:0px;left:0;max-height:0px;}
 }
 javascript {display:none !important;}
+start-menu div {max-height:60svh; overflow-y:auto;}
 .icon_menu {background-image:url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABIAAAAPCAMAAADeWG8gAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8YQUAAAAGUExURf///wAAAFXC034AAAACdFJOU/8A5bcwSgAAAAlwSFlzAAAOwwAADsMBx2+oZAAAABlJREFUKFNjYMQAxAoxoAGiNWKAwWkWIyMAfLAA3x94/RYAAAAASUVORK5CYII=);background-repeat:no-repeat;background-position:center;background-size:20px;} 
-start-menu {cursor:default !important; @apply hidden bg-gray-950/70  h-[10svh] w-[320px] px-4 pl-0;backdrop-filter: blur(8px) brightness(0.6) !important;--tw-background-blur: 0 !important;}
+start-menu {cursor:default !important; @apply hidden bg-gray-950/70  min-h-[10svh] w-[320px] px-4 pl-0;backdrop-filter: blur(16px) brightness(0.6) !important;--tw-background-blur: 0 !important;padding-bottom:12px;}
 taskbar item {@apply hover:bg-white/10 active:bg-white/5 active:duration-75 duration-200 w-[48px] h-[40px] inline-flex justify-center items-center align-middle p-[11px] aspect-square}
 taskbar item img {@apply aspect-square}
 notification icon {@apply mr-2 w-[16px] h-[16px] inline-flex bg-[#5F6368];background-image:url(webwin-logo-xs.png);background-size:cover;}
